--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import IndexLayout from '../layouts/IndexLayout.astro';
         <nav class="menu">
           <a href="/artists" class="menu-item">> ARTISTS</a>
           <a href="/releases" class="menu-item">> RELEASES</a>
-          <a href="/about" class="menu-item">> ABOUT US</a>
+          <a href="/about" class="menu-item">> ABOUT</a>
           <a href="/contacts" class="menu-item">> CONTACTS</a>
           <button class="menu-item disabled" disabled>> SHOP (Coming Soon)</button>
         </nav>
