--- a/src/pages/artists.astro
+++ b/src/pages/artists.astro
@@ -1,6 +1,7 @@
 ---
 import HeaderLayout from "../layouts/HeaderLayout.astro";
 import artists from "../data/artists.json";
+import FooterLayout from "../layouts/FooterLayout.astro";
 ---
 
 <HeaderLayout title="Protocol Zero — Artists" active="artists">
@@ -18,3 +19,4 @@ import artists from "../data/artists.json";
     </div>
   </section>
 </HeaderLayout>
+<FooterLayout />
