--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,6 @@
 ---
 import HeaderLayout from "../layouts/HeaderLayout.astro";
+import FooterLayout from "../layouts/FooterLayout.astro";
 ---
 
 <HeaderLayout title="Protocol Zero — About" active="about">
@@ -15,3 +16,4 @@ import HeaderLayout from "../layouts/HeaderLayout.astro";
     </p>
   </section>
 </HeaderLayout>
+<FooterLayout />
