--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -3,13 +3,13 @@ import HeaderLayout from "../layouts/HeaderLayout.astro";
 import FooterLayout from "../layouts/FooterLayout.astro";
 ---
 
-<HeaderLayout title="Protocol Zero — Contact" active="contact">
+<HeaderLayout title="Protocol Zero — Contacts" active="contacts">
   <link rel="stylesheet" href="/styles/pages.css" />
 
   <section class="text-page">
-    <h1>CONTACT</h1>
+    <h1>CONTACTS</h1>
     <p>For demo submissions or collaborations, feel free to reach out!</p>
-    <p>Send us a private Spotify link at the following email:</p>
+    <p>Send us a private Soundcloud link at the following email:</p>
     <p><a href="mailto:demo@protocolzero.online">demo@protocolzero.online</a></p>
   </section>
 </HeaderLayout>
