--- a/src/pages/artists/[artist].astro
+++ b/src/pages/artists/[artist].astro
@@ -62,13 +62,13 @@ const imgSrc = withLeadingSlash(artist.image || "");
         <div class="artist-player">
           <iframe
             width="100%"
-            height="300"
+            height="180"
             scrolling="no"
             frameborder="no"
             allow="autoplay"
             src={`https://w.soundcloud.com/player/?url=${encodeURIComponent(
               artist.trackEmbed
-            )}&visual=true&show_teaser=false&color=%230a0a0a`}>
+            )}&visual=false&show_teaser=false&hide_related=true&color=%230a0a0a`}>
           </iframe>
         </div>
       )}
