--- a/src/layouts/FooterLayout.astro
+++ b/src/layouts/FooterLayout.astro
@@ -4,17 +4,6 @@ import "../../public/styles/footer.css";
 
 <footer class="footer">
   <div class="footer-inner">
-    <p>© Protocol Zero</p>
+    <p>© Protocol Zero - Est. 2025</p>
   </div>
 </footer>
-
-<!-- <footer class="footer">
-  <div class="footer-inner">
-    <div class="footer-links">
-      <a href="https://instagram.com/protocolzero.music" target="_blank" rel="noopener noreferrer">Instagram</a>
-      <a href="mailto:demo@protocolzero.online">Email</a>
-    </div>
-
-    <p>© Protocol Zero</p>
-  </div>
-</footer> -->
