--- a/src/pages/releases.astro
+++ b/src/pages/releases.astro
@@ -20,6 +20,8 @@ import releases from "../data/releases.json";
             alt={`${rel.title} cover`}
             loading="lazy"
             decoding="async"
+            width="80"
+            height="80"
           />
           <div class="release-info">
             <div class="release-title">{rel.title}</div>
