--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,10 +11,10 @@ import IndexLayout from '../layouts/IndexLayout.astro';
 
       <div class="right-section">
         <nav class="menu">
+          <a href="/about" class="menu-item">&gt; ABOUT US</a>
           <a href="/artists" class="menu-item">&gt; ARTISTS</a>
-          <a href="/releases" class="menu-item">&gt; RELEASES</a>
-          <a href="/about" class="menu-item">&gt; ABOUT</a>
           <a href="/contacts" class="menu-item">&gt; CONTACTS</a>
+          <a href="/releases" class="menu-item">&gt; RELEASES</a>
           <button class="menu-item disabled" disabled>&gt; SHOP (Coming Soon)</button>
         </nav>
       </div>
