--- a/public/styles/footer.css
+++ b/public/styles/footer.css
@@ -37,5 +37,5 @@ main {
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start; /* lascia il contenuto in alto */
 }
